--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,15 @@
 {
-  "autoload": {
-    "psr-4": {
-      "PHP\\Architecture\\": "src"
+    "autoload": {
+        "psr-4": {
+            "PHP\\Architecture\\": "src/"
+        }
+    },
+    "autoload-dev":{
+        "psr-4": {
+            "PHP\\Architecture\\Tests\\": "tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.1"
     }
-  }
 }
